# ASPIS

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  DuplicateGlobals.cpp  EDDI.cpp  FuncRetToRef.cpp  LICENSE  RASM.cpp  README.md  _config.yml  aspis.sh  aspis_explorer.sh  changes.adoc  docker-compose.yml  index.md  requirements.txt  test.py  test_aspis.py  test_aspis_docker.py  test_config.json  test_docker_config.json
.github/actions/prepare-llvm-cache/: action.yml
.github/workflows/: main.yml
_layouts/: default.html
assets/css/: style.scss
cuspis/: CUSPIS.cuh  README.md
docker/: Dockerfile  README.md  docker-compose.yml
examples/: .gitignore
examples/c-benchmarks/sha/: ft_utils.c  random_string.h  sha  sha.c  sha.h
examples/cpp-benchmarks/: full_test.cpp
examples/cuda/: add.cu  analysis.py  axpy.cu  compile_cuda.sh  sum.cu
examples/cuda/axpy/: axpy.cu
examples/cuda/conv/: conv.cu  jpg_to_dat.py  show_images.ipynb
examples/sha/: ft_utils.c  ft_utils.h  sha.c  sha.h  sha_driver.c
passes/: ASPIS.h  CFCSS.cpp  CMakeLists.txt  DuplicateGlobals.cpp  EDDI.cpp  FuncRetToRef.cpp  RACFED.cpp  RASM.cpp
passes/Duplication/: ASPISInstr.cpp  ASPISInstr.h  ASPISValues.cpp  ASPISValues.h
passes/Profiling/: ASPISCheckProfiler.cpp
passes/Utils/: CMakeLists.txt  ERDITS.h  Utils.cpp  Utils.h  Utils.hpp
testing/: .gitignore  README.md  config_builder.py  conftest.py  docker_test_config.json  requirements.txt  test.py  test_docker_pipeline.py
testing/config/: llvm.toml  racfed+eddi.toml  racfed.toml  tests.toml
testing/tests/c/autonomous_bench/: multiple_functions.c
testing/tests/c/control_flow/: function_pointer.c  loop_exit.c  nested-branch.c  simple-branch.c  switch-case.c
testing/tests/c/data_duplication_integrity/: data_dep_branches.c  global_var_across_functions.c  misc_data_dup.c  printf_to_duplicate.c  volatile_io.c
testing/tests/c/declared_signatures/: global_var_across_functions.c  mixed_ops.c  multi_if_then_else.c  nested-branch.c
testing/tests/c/extended/: array2d_sum.c  atomic_fetch_add.c  bitfield_packet.c  funptr_bsearch_callback.c  funptr_bsearch_callback_mitigation.c  funptr_factory_return.c  funptr_heap_alias.c  funptr_heap_minimal.c  funptr_qsort_callback.c  funptr_qsort_callback_mitigation.c  funptr_static_map.c  funptr_table_runtime.c  heap_dynamic.c  mega_ok_domain.c  memcpy_struct_bulk.c  pthread_entry_callback.c  pthread_entry_callback_mitigation.c  ptr_to_ptr.c  recursion_factorial.c  signal_flag_handler.c  signal_loop_break_volatile.c  struct_player.c  varargs_sum.c
testing/tests/c/malardalen/: bsort100.c  insertsort.c  matmult.c
testing/tests/c/mibench/: basicmath.c  crc32_mibench.c  dijkstra_small_mibench.c
testing/tests/c/misc_math/: arit_pipeline.c  mixed_ops.c  xor_cypher.c
testing/tests/c/multi_instruction/: add.c  call_less_two.c  function.c  if_then_else.c  multi_if_then_else.c  phi.c
testing/tests/cpp/complex/: full_test.cpp  full_test.h  main_full_test.cpp
testing/tests/cpp/declared_signatures/: class.cpp  inline_constexpr.cpp
testing/tests/cpp/simple/: add.cpp  class.cpp  exceptions.cpp  fact.cpp  file_handler.cpp  func.cpp  heap.cpp  inline_constexpr.cpp  lambda_captures.cpp  mul.cpp  ptr.cpp  stl_containers_advanced.cpp  template.cpp  threads.cpp  volatile_memory_order.cpp
tests/cpp/simple/: class.cpp  exceptions.cpp  fact.cpp  file_handler.cpp  func.cpp  heap.cpp  inline_constexpr.cpp  lambda_captures.cpp  mul.cpp  ptr.cpp  stl_containers_advanced.cpp  template.cpp  threads.cpp  volatile_memory_order.cpp
